# dsa_queue_simulator

./: CMakeLists.txt  generator.c  main.c  readme.md  traffic_simualtion.c  traffic_simulation.c  traffic_simulation.h
lib/SDL2_install/cmake/: SDL2Targets.cmake  SDL2mainTargets.cmake  SDL2staticTargets.cmake  SDL2testTargets.cmake
lib/SDL2_install/include/SDL2/: SDL_revision.h
lib/SDL2_install/lib/: SDL2_test.lib  SDL2main.lib
lib/SDL2_install/lib/pkgconfig/: sdl2.pc
